MonetDB/src/mal/Tests/tst115.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2001, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## the next step is to trace the call of a mal function call
#
#command + (L:any::1,R:any::1):any::1 = addIntInt; 
command Admin.+(L:any::1,R:any::1):any::1 = addIntInt;	#0 polymorphic:void (+:any::1)(L:any::1)(R:any::1)
#
#function doitOnce():int;
#	z:= 12;
#	return z;
#end function;
function Admin.doitOnce():int;	#0:void (doitOnce:int)
	z := 12;	#1:int (z:int)($2:int)
	return z;	#2:int (z:int)
end function;	#3:void 
#
#function doitTwice(i:int):int;
#	j:= 2;
#	k:= 11111;
#	i:= j+k;
#	return i;
#end function;
function Admin.doitTwice(i:int):int;	#0:void (doitTwice:int)(i:int)
	j := 2;	#1:int (j:int)($3:int)
	k := 11111;	#2:int (k:int)($5:int)
	i := Admin.+(j,k);	#3:int (i:int)(j:int)(k:int)
	return i;	#4:int (i:int)
end function;	#5:void 
#
#
#a:=1;
#b:= doitOnce();
#c:= 2;
#d:= doitTwice(3);
#c:= 3;
#d:= doitTwice("wrong");
#
function Admin.main():int;	#0:void (main:int)
	a := 1;	#1:int (a:int)($2:int)
	b := Admin.doitOnce();	#2:int (b:int)
	c := 2;	#3:int (c:int)($5:int)
	d := Admin.doitTwice(3);	#4:int (d:int)($7:int)
	c := 3;	#5:int (c:int)($7:int)
	d := doitTwice("wrong");	#6 unknown:void (d:int)($8:str)
end function;	#7:void 
!ERROR: address of function 'addIntInt' not found
!ERROR: 'doitTwice' undefined in Admin.main[6]
!ERROR: MALexception:Admin.doitTwice[3]:address of function missing
MALexception:Admin.doitTwice[6]:propagated
MALexception:Admin.main[8]:propagated
>